# optuna-fast-fanova

./: requirements.txt
.github/workflows/: maturin.yml
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
