[package]
name = "optuna-fast-fanova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "optuna_fast_fanova"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
fanova = "0.2.0"
ndarray = "0.15.6"
numpy = "0.18.0"
